@@ -340,6 +340,10 @@ Library
 Documentation
 -------------
 
+- Issue #6953: Rework the Readline module documentation to group related
+  functions together, and add more details such as what underlying Readline
+  functions and variables are accessed.
+
 - Issue #23606: Adds note to ctypes documentation regarding cdll.msvcrt.
 
 - Issue #25500: Fix documentation to not claim that __import__ is searched for
